SVS-92: Technical - consider using a nuget package of MS.ALM.Authentication

--- a/src/Integration.UnitTests/packages.config
+++ b/src/Integration.UnitTests/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="EnvDTE" version="8.0.0" targetFramework="net46" />
   <package id="EnvDTE80" version="8.0.0" targetFramework="net46" />
+  <package id="Microsoft.Alm.Authentication" version="3.2.0" targetFramework="net46" />
+  <package id="Microsoft.IdentityModel.Clients.ActiveDirectory" version="3.13.1" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
