Revert moving to Microsoft.Alm.Authentication package as it is not signed

--- a/src/TestInfrastructure/TestInfrastructure.csproj
+++ b/src/TestInfrastructure/TestInfrastructure.csproj
@@ -377,6 +377,7 @@
     <Compile Include="Helpers\MefTestHelpers.cs" />
     <Compile Include="Helpers\RoslynExportProfileHelper.cs" />
     <Compile Include="Helpers\RuleSetAssert.cs" />
+    <Compile Include="Helpers\SecureStringExtensions.cs" />
     <Compile Include="Helpers\SingleObjectImporter.cs" />
     <Compile Include="Helpers\TestRuleSetHelper.cs" />
     <Compile Include="Helpers\ThreadHelper.cs" />
