--- a/src/SonarAnalyzerEmbedder/packages.SonarAnalyzerEmbedder.VisualBasic.config
+++ b/src/SonarAnalyzerEmbedder/packages.SonarAnalyzerEmbedder.VisualBasic.config
@@ -1,4 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="SonarAnalyzer.VisualBasic" version="1.21.0-RC1" targetFramework="net46" developmentDependency="true" />
+  <package id="SonarAnalyzer.VisualBasic" version="1.21.0" targetFramework="net46" developmentDependency="true" />
 </packages>
