--- a/src/Integration.UnitTests/packages.config
+++ b/src/Integration.UnitTests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="EnvDTE" version="8.0.0" targetFramework="net46" />
   <package id="EnvDTE80" version="8.0.0" targetFramework="net46" />
+  <package id="FluentAssertions" version="4.18.0" targetFramework="net46" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Diagnostics" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
