--- a/src/Integration.Vsix.UnitTests/packages.config
+++ b/src/Integration.Vsix.UnitTests/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EnvDTE" version="8.0.0" targetFramework="net46" />
+  <package id="FluentAssertions" version="4.18.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.1.0" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.3.2" targetFramework="net46" />
