--- a/src/Progress.TestFramework/packages.config
+++ b/src/Progress.TestFramework/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FluentAssertions" version="4.18.0" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging" version="14.3.25407" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.14.0" version="14.3.25407" targetFramework="net46" />
