Fix #132 Created dedicated projects for Visual Studio 2017, including dedicated packages.config files; upgraded all nugets in the 2017 projects.

--- a/src/Progress.TestFramework/Progress.TestFramework.csproj
+++ b/src/Progress.TestFramework/Progress.TestFramework.csproj
@@ -178,7 +178,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="packages.Progress.TestFramework.config" />
     <None Include="Progress.TestFramework.ruleset" />
   </ItemGroup>
   <ItemGroup>
