--- a/src/Integration.Vsix.UnitTests/packages.Integration_2017.Vsix.UnitTests.config
+++ b/src/Integration.Vsix.UnitTests/packages.Integration_2017.Vsix.UnitTests.config
@@ -7,20 +7,22 @@
   <package id="Microsoft.CodeAnalysis.Common" version="1.3.2" targetFramework="net46" />
   <package id="Microsoft.CodeAnalysis.Workspaces.Common" version="1.3.2" targetFramework="net46" />
   <package id="Microsoft.Composition" version="1.0.30" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.CoreUtility" version="15.0.25726-Preview5" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.ImageCatalog" version="15.0.26201" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Imaging" version="15.0.26201" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="14.3.25407" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Imaging.Interop.14.0.DesignTime" version="15.0.25726-Preview5" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.OLE.Interop" version="7.10.6070" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.14.0" version="14.3.25407" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Immutable.10.0" version="10.0.30319" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Immutable.11.0" version="11.0.50727" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Immutable.12.0" version="12.0.21003" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Immutable.14.0" version="14.3.25407" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Shell.14.0" version="15.0.25414-Preview5" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Shell.Framework" version="15.0.25726-Preview5" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.10.0" version="15.0.25413-Preview5" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.11.0" version="15.0.25413-Preview5" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.12.0" version="15.0.25413-Preview5" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Shell.Immutable.14.0" version="15.0.25403-Preview5" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop" version="7.10.6071" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop.10.0" version="10.0.30319" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop.11.0" version="11.0.61030" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop.12.0" version="12.0.30110" targetFramework="net46" />
-  <package id="Microsoft.VisualStudio.Shell.Interop.14.0.DesignTime" version="14.3.25407" targetFramework="net46" />
+  <package id="Microsoft.VisualStudio.Shell.Interop.14.0.DesignTime" version="15.0.25726-Preview5" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop.8.0" version="8.0.50727" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.Shell.Interop.9.0" version="9.0.30729" targetFramework="net46" />
   <package id="Microsoft.VisualStudio.TextManager.Interop" version="7.10.6070" targetFramework="net46" />
